link arb presentation

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 								- The Worlds First Digital Bathroom Guestbook
 							</li>
 							<li>
-								Creator of a Statistical Arbitrage SportsBetting Algorithm which nets 12.4% profit YoY. 
+								Creator of a <a href="week_2/jacob_week_2_presentation.html">Statistical Arbitrage SportsBetting Algorithm</a> which nets 12.4% profit YoY. 
 							</li>
 							<li>
 								Manager of an Investment Portfolio which nets 38% YoY
